@@ -3,6 +3,7 @@
 
 tronbot
 core
+commands.sh
 
 # Fremdcode
 freiesmagazin-2014-10-contest/
