@@ -1,0 +1,8 @@
+GAMEBOARDSTART 5,5
+....#
+.#.#.
+.....
+.#.#.
+.....
+GAMEBOARDEND
+POS 1 3,1 S
