@@ -1,0 +1,24 @@
+GAMEBOARDSTART 21,21
+.....................
+.#.#.#.#.#.#.#.#.#.#.
+.....................
+.#.#...#.#.#.#.#.#.#.
+...............#.....
+.#.#.#.#.#.#.#.#.#.#.
+...#.................
+.#####...#.#.#.#.#.#.
+...#.................
+.#.#.#.#.#.#.#.#.#.#.
+.....................
+.#.#.#.###.#.#.#...#.
+.....................
+.#.#.#.#.#.#.#.#.#.#.
+.....................
+.#.#.#.#.#.#.#.#.#.#.
+.............#.......
+.#.#.#.#.#.#.#.#.#.#.
+...#.................
+.#.###.#.#.#.#.#.#.#.
+.....................
+GAMEBOARDEND
+POS 1 1,1 S
