@@ -1,0 +1,14 @@
+GAMEBOARDSTART 9,11
+..#......
+.#.#.#.#.
+.........
+.#.#.#.#.
+.........
+.#.#.#.#.
+.........
+.#.#.#.#.
+.........
+.#.#.#.#.
+.........
+GAMEBOARDEND
+POS 1 2,3 E
