@@ -1,3 +1,7 @@
+2014-12-05
+	- Tiefensuche mit einfacher Bewertung
+	- Tiefensuche für Endspiel
+
 2014-12-02
 	- Erreichbare Raumgröße wird ermittelt (enthält noch ein paar Ungenauigkeiten/Vereinfachungen)
 
